feat: add reset password feature,refactor: change swagger api description
